--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
   <script src="assets/js/main.js"></script>
 
 
-    <script>
-/* COLOR VALUES */
+<script>
+/* COLORS */
 const digitColors = [
   "Black","Brown","Red","Orange","Yellow","Green","Blue","Violet","Grey","White"
 ];
@@ -282,26 +282,36 @@ const toleranceValues = {
   "Silver": "±10%"
 };
 
-function loadOptions() {
+/* MAP COLORS TO HEX FOR PREVIEW */
+const colorHex = {
+  Black: "#000000",
+  Brown: "#8B4513",
+  Red: "#FF0000",
+  Orange: "#FF8C00",
+  Yellow: "#FFD700",
+  Green: "#008000",
+  Blue: "#0000FF",
+  Violet: "#9400D3",
+  Grey: "#808080",
+  White: "#FFFFFF",
+  Gold: "#D4AF37",
+  Silver: "#C0C0C0"
+};
 
-  // Clear previous options to avoid duplicates
-  document.querySelectorAll(".digit-band").forEach(sel => {
-    sel.innerHTML = ""; // <-- THIS FIXES THE PROBLEM
-  });
+/* Populate dropdowns */
+function loadOptions() {
+  document.querySelectorAll(".digit-band").forEach(sel => sel.innerHTML = "");
   multiplier.innerHTML = "";
   tolerance.innerHTML = "";
 
-  // Fill digit bands (Band 1, Band 2, Band 3)
-  document.querySelectorAll(".digit-band").forEach(sel => {
-    digitColors.forEach((color, index) => {
-      sel.insertAdjacentHTML(
-        "beforeend",
+  digitColors.forEach((color, index) => {
+    document.querySelectorAll(".digit-band").forEach(sel => {
+      sel.insertAdjacentHTML("beforeend",
         `<option value="${index}">${color}</option>`
       );
     });
   });
 
-  // Fill multiplier list
   for (let color in multiplierValues) {
     multiplier.insertAdjacentHTML(
       "beforeend",
@@ -309,59 +319,66 @@ function loadOptions() {
     );
   }
 
-  // Fill tolerance list
   for (let color in toleranceValues) {
     tolerance.insertAdjacentHTML(
       "beforeend",
-      `<option value="${toleranceValues[color]}">${color} (${toleranceValues[color]})</option>`
+      `<option value="${toleranceValues[color]}">${color}</option>`
     );
   }
-
-  document.getElementById("calculatorModal").addEventListener("shown.bs.modal", () => {
-  loadOptions();
-
-  // Attach onchange listeners
-  [band1, band2, band3, multiplier, tolerance, mode].forEach(el => {
-    el.addEventListener("change", updatePreview);
-  });
-
-  updatePreview(); // Initialize preview
-});
 }
 
-/* Handle mode switching */
-document.getElementById("mode").addEventListener("change", function () {
-  document.getElementById("band3-container").style.display =
-    this.value === "5" ? "block" : "none";
-});
+/* Live preview */
+function updatePreview() {
+  pv_band1.style.background = colorHex[band1.options[band1.selectedIndex].text];
+  pv_band2.style.background = colorHex[band2.options[band2.selectedIndex].text];
+  
+  if (mode.value === "5") {
+    pv_band3.style.display = "inline-block";
+    pv_band3.style.background = colorHex[band3.options[band3.selectedIndex].text];
+  } else {
+    pv_band3.style.display = "none";
+  }
 
-/* Calculate function */
+  pv_multiplier.style.background = colorHex[multiplier.options[multiplier.selectedIndex].text];
+  pv_tolerance.style.background = colorHex[tolerance.options[tolerance.selectedIndex].text];
+}
+
+/* Calculate resistance */
 function calculateResistor() {
-  const mode = document.getElementById("mode").value;
+  const modeVal = mode.value;
+
   let b1 = parseInt(band1.value);
   let b2 = parseInt(band2.value);
   let multiplierVal = parseFloat(multiplier.value);
   let tol = tolerance.value;
 
-  let base;
+  let base = (modeVal === "5")
+    ? (b1 * 100 + b2 * 10 + parseInt(band3.value))
+    : (b1 * 10 + b2);
 
-  if (mode === "4") {
-    base = (b1 * 10 + b2);
-  } else {
-    let b3 = parseInt(band3.value);
-    base = (b1 * 100 + b2 * 10 + b3);
-  }
+  let ohms = base * multiplierVal;
 
-  let resistance = base * multiplierVal;
-
-  document.getElementById("result").textContent =
-    resistance.toLocaleString() + " Ω " + tol;
+  result.textContent = ohms.toLocaleString() + " Ω " + tol;
 }
 
-/* Load dropdown values when modal opens */
-document.getElementById("calculatorModal").addEventListener("shown.bs.modal", loadOptions);
-</script>
+/* OPEN MODAL → INITIALIZE */
+document.getElementById("calculatorModal").addEventListener("shown.bs.modal", () => {
+  loadOptions();
+  updatePreview();
 
+  // Attach events only once
+  [band1, band2, band3, multiplier, tolerance, mode].forEach(el => {
+    el.onchange = updatePreview;
+  });
+});
+
+/* Show/hide 3rd band when switching mode */
+mode.addEventListener("change", () => {
+  document.getElementById("band3-container").style.display =
+    mode.value === "5" ? "block" : "none";
+  updatePreview();
+});
+</script>
 
 
 
@@ -370,6 +387,7 @@ document.getElementById("calculatorModal").addEventListener("shown.bs.modal", lo
 </body>
 
 </html>
+
 
 
 
