--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
     <div class="row justify-content-center">
       <div class="col-lg-6 portfolio-item card-surface" style="background-color: #eeeeee;">
 
+        <img src="assets/img/40810410.png" class="img-fluid portfolio-img" width="200" height="300" alt="Image of the Enola project design">
         <!-- Correct link -->
        <button class="btn btn-primary w-100" data-bs-toggle="modal" data-bs-target="#calculatorModal">
   Launch Calculator
@@ -334,6 +335,7 @@ document.getElementById("calculatorModal").addEventListener("shown.bs.modal", lo
 </body>
 
 </html>
+
 
 
 
