--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/custom.js"></script>
 
 <script>
 /* COLOR VALUES */
@@ -377,6 +378,7 @@ document.getElementById("calculatorModal").addEventListener("shown.bs.modal", lo
 </body>
 
 </html>
+
 
 
 
