--- a/index.html
+++ b/index.html
@@ -170,7 +170,9 @@
                         <div class="col-md-6"><input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required></div>
                         <div class="col-md-6"><input type="text" name="surname" class="form-control" id="surname" placeholder="Your Surname" required></div>
                         <div class="col-md-6"><input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required></div>
-                        <div class="col-md-6"><input type="text" class="form-control" name="phone" id="phone" placeholder="Phone Number" required></div>
+                       <div class="col-md-6">
+    <input type="text" class="form-control" name="phone" id="phone" placeholder="Phone Number" required>
+</div>
                         <div class="col-md-12"><input type="text" class="form-control" name="address" id="address" placeholder="Address" required></div>
                       <div class="row gy-4">
     <div class="row gy-4">
@@ -394,6 +396,7 @@ document.getElementById("calculatorModal").addEventListener("shown.bs.modal", lo
 </body>
 
 </html>
+
 
 
 
