--- a/index.html
+++ b/index.html
@@ -151,6 +151,57 @@
     </div>
   </div>
 </section>
+    </section>
+
+    <section id="memory-game" class="memory-game section light-background" data-aos="fade-up" data-aos-duration="1000">
+  <div class="container">
+    <h2>Memory Game</h2>
+    <p>Test your memory with this flip card game! Select a difficulty and press Start.</p>
+
+    <div class="row justify-content-center">
+      <div class="col-lg-10 card-surface" style="background-color: #eeeeee; padding: 30px;">
+        
+        <div class="d-flex justify-content-between align-items-center mb-4 flex-wrap">
+          
+          <div class="me-3 mb-2 mb-md-0">
+            <label for="difficulty-selector" class="form-label mb-1 fw-bold">Select Difficulty:</label>
+            <select id="difficulty-selector" class="form-select" style="max-width: 150px;">
+              <option value="easy">Easy (4x3)</option>
+              <option value="hard">Hard (6x4)</option>
+            </select>
+          </div>
+
+          <div class="d-flex flex-grow-1 justify-content-end align-items-center mb-2 mb-md-0">
+            <div class="me-4 text-center">
+              <span class="d-block fw-bold">Moves:</span>
+              <span id="moves-count" class="h5 mb-0">0</span>
+            </div>
+            <div class="text-center">
+              <span class="d-block fw-bold">Matches:</span>
+              <span id="matches-count" class="h5 mb-0">0</span>
+            </div>
+          </div>
+        </div>
+
+        <div id="game-board" class="row justify-content-center" style="margin: 0 auto;">
+          <p class="text-center text-muted mt-5">Press 'Start Game' to begin!</p>
+        </div>
+
+        <div id="win-message" class="alert alert-success text-center mt-4" style="display: none;">
+          <strong>🎉 Congratulations! You won in <span id="final-moves">0</span> moves!</strong>
+        </div>
+
+        <div class="d-flex justify-content-center mt-4">
+          <button id="start-game-btn" class="btn-custom me-3">Start Game</button>
+          <button id="restart-game-btn" class="btn btn-secondary">Restart Game</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+</main>
+<footer id="footer" class="footer light-background">
 </main>
 <footer id="footer" class="footer light-background">
     <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -396,6 +447,7 @@ document.getElementById("calculatorModal").addEventListener("shown.bs.modal", lo
 </body>
 
 </html>
+
 
 
 
