--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
 
   <script src="assets/js/main.js"></script>
   <script src="assets/js/custom.js"></script>
+  <script src="assets/js/memory-game.js"></script>
 
 <script>
 /* COLOR VALUES */
@@ -447,6 +448,7 @@ document.getElementById("calculatorModal").addEventListener("shown.bs.modal", lo
 </body>
 
 </html>
+
 
 
 
